--- a/app/views/checkouts/new.html.erb
+++ b/app/views/checkouts/new.html.erb
@@ -1,16 +1,6 @@
+<h1>Make a new transaction</h1>
 
-<html lang="en">
-<head>
-
-<h2>Make a New Transaction</h2>
-
-
-<meta charset="UTF-8">
-<title>Checkout</title>
-</head>
-<body >
-
-	<form id="checkout-form" action="/checkouts" method="post">
+<%= form_tag({controller: 'checkouts', action: 'create'}, method: 'post', id: 'checkout-form') do %>
   <div id="error-message"></div>
 
   <label for="card-number">Card Number</label>
@@ -23,34 +13,20 @@
   <div class="hosted-field" id="expiration-date"></div>
 
   <input type="hidden" name="payment_method_nonce">
-  <input type="submit" value="Pay">
-</form>
+  <input type="submit" value="Pay $20">
+<% end %>
 
-<!-- Load the Client component. -->
-<script src="https://js.braintreegateway.com/web/3.12.0/js/client.min.js"></script>
+<script src="https://js.braintreegateway.com/js/beta/braintree-hosted-fields-beta.16.min.js"></script>
 
-<!-- Load the Hosted Fields component. -->
-<script src="https://js.braintreegateway.com/web/3.12.0/js/hosted-fields.min.js"></script>
-
+<script id="braintree-client-token" type="application/json"><%= @client_token %></script>
 
 <script>
-// We generated a client token for you so you can test out this code
-// immediately. In a production-ready integration, you will need to
-// generate a client token on your server (see section below).
-var authorization = '<%= @client_token %>';
-var submit = document.querySelector('input[type="submit"]');
+var clientToken = document.getElementById('braintree-client-token').innerHTML;
 
-braintree.client.create({
-  authorization: authorization
-}, function (clientErr, clientInstance) {
-  if (clientErr) {
-    // Handle error in client creation
-    return;
-  }
-
-  braintree.hostedFields.create({
-    client: clientInstance,
-    styles: {
+braintree.setup(clientToken, 'custom', {
+  id: 'checkout-form',
+  hostedFields: {
+       styles: {
       'input': {
         'font-size': '14pt'
       },
@@ -61,7 +37,6 @@ braintree.client.create({
         'color': 'green'
       }
     },
-    fields: {
       number: {
         selector: '#card-number',
         placeholder: '4111 1111 1111 1111'
@@ -74,18 +49,6 @@ braintree.client.create({
         selector: '#expiration-date',
         placeholder: '10/2019'
       }
-    }
-  }, function (hostedFieldsErr, hostedFieldsInstance) {
-    if (hostedFieldsErr) {
-      // Handle error in Hosted Fields creation
-      return;
-    }
-
-    submit.removeAttribute('disabled');
-  });
+   }
 });
 </script>
-
-
-</body>
-</html>
