--- a/app/views/checkouts/create.html.erb
+++ b/app/views/checkouts/create.html.erb
@@ -20,7 +20,7 @@
 	<% end %>
 
 
-	<a href="/checkouts"> Back to checkout page</a>
+	<a href="/checkouts"> Back to checkout </a>
 </body>
 </html>
 
